# mcp-smart-reader

./: .gitignore  CLAUDE.md  GIT-WORKFLOW.md  README.md  pyproject.toml  test_doc.md
.claude/: README.md  project-init-config.json
.claude/commands/: project-init.md
.specify/memory/: constitution.md
specs/001-naming-refactor-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-naming-refactor-server/checklists/: requirements.md
specs/001-naming-refactor-server/contracts/: README.md
src/mcp_smart_reader/: __init__.py  server.py  summarizer.py
