[project]
name = "mcp-smart-reader"
version = "0.1.0"
description = "Smart document reader MCP server with automatic summarization for large files"
readme = "README.md"
authors = [
    { name = "Scot Campbell", email = "scot@prefrontal.systems" }
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.3.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
]

[project.scripts]
mcp-smart-reader = "mcp_smart_reader.server:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=mcp_smart_reader --cov-report=term-missing"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
